# ufirst-backend

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  PLAN.md  REVIEW_FINDINGS.md  alembic.ini  docker-compose.yml  openapi.json  pyproject.toml
.claude/memory/: MEMORY.md  feedback_env_updates.md
app/: config.py  main.py
app/core/: auth.py  database.py  encryption.py  events.py  exceptions.py  middleware.py  money.py  pagination.py  redis.py  storage.py
app/jobs/: beat_schedule.py  celery_app.py
app/modules/card/: events.py  models.py  repository.py  routes.py  schemas.py  service.py
app/modules/identity/: events.py  middleware.py  models.py  repository.py  routes.py  schemas.py  service.py
app/modules/transaction/: events.py  models.py  repository.py  routes.py  schemas.py  service.py
app/modules/wallet/: events.py  handlers.py  models.py  repository.py  routes.py  schemas.py  service.py  tasks.py
docs/: U-FirstSupport_Open_Banking_Funding_Addendum_v2.1.docx  architecture.md  render-deploy.md
migrations/: env.py
migrations/versions/: 20260319_0001_identity_initial_schema.py  20260319_0002_wallet_initial_schema.py  20260319_0003_wallet_fix_idempotency_constraint.py  20260319_0004_identity_add_profile_fields.py  20260319_0005_identity_email_nullable.py  20260319_0006_wallet_open_banking.py  20260319_0007_wallet_card_payments.py  20260319_0008_card_initial_schema.py  20260320_0009_identity_role_nullable.py  20260322_0010_transaction_initial_schema.py  20260328_0011_normalize_enum_case.py
scripts/: init_schemas.sql
tests/: conftest.py
tests/core/: test_idempotency_middleware.py
tests/modules/card/: test_card_lifecycle.py
tests/modules/identity/: test_beneficiary_links.py  test_user_creation.py  test_webhook_security.py
tests/modules/transaction/: test_authorization.py
tests/modules/wallet/: test_fund_wallet.py  test_wallet_creation.py  (+1 more)
(+10 files in other folders)
